# LLM-Inference-API-in-Rust

./: README.md
language_model_server/: Cargo.toml
language_model_server/src/: main.rs
ui thingy/: app.py  requirements.txt
