[package]
name = "llm_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = {version = "0.13"}
tokio = {  version = "0.2", features = ["macros", "rt-threaded"]}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
llm = { git = "https://github.com/rustformers/llm.git" }
rand = "0.8.5"

